# PPGI0119-Topicos

./: .gitignore  README.md
Atividade_1/: README.md  pyproject.toml  requirements.txt
Atividade_1/notebooks/: exemplo_bpe.ipynb
Atividade_1/src/BPE/: BPE.py  __init__.py
Atividade_1/src/BPE_PPGI/: BPEPPGI.py  __init__.py
Atividade_1/src/BPE_PPGI/utils/: jsondataset.py
Atividade_2/: README.md  pyproject.toml  requirements.txt
Atividade_2/notebooks/: exemplo_bigram.ipynb
Atividade_2/src/BIGRAM/: bigram_base.py  bigram_context.py
Atividade_3/: avaliacao.ipynb  find_best_hyperparameters.py
Atividade_4/: BertClassifier.ipynb
Atividade_5/: GPT2.ipynb
dados/atv3/: X_test_CSTR.pkl  X_test_re8.pkl  X_train_CSTR.pkl  X_train_re8.pkl  results_gs_CSTR.csv  results_gs_re8.csv  y_test_CSTR.pkl  y_test_re8.pkl  y_train_CSTR.pkl  y_train_re8.pkl
